<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Food and Culture</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="msg_already_have_an">Already have an account? <font color="#04a777">Login Now</font></string>
    <string name="msg_hello_register">Hello! Register to get started</string>
    <string name="lbl_username">Username</string>
    <string name="action_settings">Action Setting</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_food_n_culture">Food and Culture Logo</string>
    <string name="lbl_login_now">Login Now</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="msg_or_register_wit">Or Register with</string>
    <string name="msg_already_have_an2">Already have an account? </string>
    <string name="lbl_password">Password</string>
    <string name="lbl_register_now">Register Now</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_signup">Sign up</string>
    <string name="lbl_welcome_back">Welcome back!</string>
    <string name="msg_enter_your_emai">Enter your email/username</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? <font color="#04a777">Register Now</font></string>
    <string name="msg_enter_your_pass">Enter your password</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_password_recove">Password Recovery</string>
    <string name="msg_anne_carry_mail">anne.carry@mail.com</string>
    <string name="lbl_send_email">Send Email</string>
    <string name="msg_enter_recovery_email">Enter your email to recover your password</string>
    <string name="msg_enter_the_otp_r">Enter the OTP received on your email</string>
    <string name="lbl_validate">Validate</string>
    <string name="lbl_otp">OTP</string>
    <string name="lbl_otp_validation">OTP Validation</string>
    <string name="msg_it_s_not_you_i">It\u2019s not you, it is us!</string>
    <string name="msg_something_went">Something went wrong</string>
    <string name="lbl_merry_new_year">Merry New Year</string>
    <string name="lbl_past_events">Past Events</string>
    <string name="lbl_my_events">My Events</string>
    <string name="lbl_events">Events</string>
    <string name="msg_19_00_forg">19 : 00 | Forg Stadium</string>
    <string name="msg_21_00_besha">21 : 00 | Besharam</string>
    <string name="lbl_peggy_s_dine">Peggy\u2019s dine</string>
    <string name="msg_21_00_latun">21 : 00 | Latuna Beach</string>
    <string name="lbl_adda">Adda</string>
    <string name="lbl_merry_wishes">Merry Wishes</string>
    <string name="msg_19_00_adda">19 : 00 | Adda Cafeé</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_max_capacity">Max Capacity</string>
    <string name="lbl_email_id">Email ID</string>
    <string name="lbl_add_image">Add Image</string>
    <string name="lbl_venue">Venue</string>
    <string name="lbl_create_event">Create Event</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_host_an_event">Host an Event</string>
    <string name="home_page">Home Page</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="lbl_10th_oct">10th Oct</string>
    <string name="lbl_16th_oct">16th Oct</string>
    <string name="lbl_eat_with_sam">Eat with Sam</string>
    <string name="lbl_hello_halifax">Hello Halifax!</string>
    <string name="msg_new_day_new_fo">New day, new food</string>
    <string name="lbl_18th_oct">18th Oct</string>
    <string name="lbl_my_past_events">My Past Events</string>
    <string name="lbl_10_12">10/12</string>
    <string name="msg_oven_stove_bo">Oven, Stove, Bowls </string>
    <string name="total_donation">$1500</string>
    <string name="lbl_amenities">Amenities</string>
    <string name="lbl_donations">Donations</string>
    <string name="lbl_berry_dine">Berry Dine</string>
    <string name="lbl_20">20</string>
    <string name="lbl_pay_with_gpay">Pay with GPay</string>
    <string name="lbl_dollar">$</string>
    <string name="msg_enter_the_amoun">Enter the amount you want to donate</string>
    <string name="lbl_donate">Donate</string>
    <string name="msg_successfully_re">Successful 🎉</string>
    <string name="lbl_800">800</string>
    <string name="lbl_rizal_reynaldhi">Rizal Reynaldhi</string>
    <string name="lbl_community">Community</string>
    <string name="msg_most_people_nev">Most people never appreciate what he does but instead they see the point of his fault for their own pleasure. </string>
    <string name="msg_meet_sam_and_hi">Meet Sam and his friends over Berry Dine to get with the community and meet them again and again because why not? You are here to explore new cultures be part of it!</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="add_to_googlepay_button_content_description">Add To Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy With Google Pay</string>
    <string name="checkout_with_googlepay_button_content_description">Checkout With Google Pay</string>
    <string name="donate_with_googlepay_button_content_description">Donate With Google Pay</string>
    <string name="order_with_googlepay_button_content_description">Order With Google Pay</string>
    <string name="pay_with_googlepay_button_content_description">Pay With Google Pay</string>
    <string name="book_with_googlepay_button_content_description">Book With Google Pay</string>
    <string name="subscribe_with_googlepay_button_content_description">Subscribe With Google Pay</string>
    <string name="text_content_description">Text for the Google Pay button</string>
    <string name="overlay_content_description">Overlay for the Google Pay button</string>

    <!-- User Profile -->
    <string name="msg_personal_detail">Personal Details</string>
    <string name="lbl_no">No</string>
    <string name="msg_do_you_want_to">Do you want to delete your account?</string>
    <string name="msg_logout">Logout?</string>
    <string name="lbl_friends">Friends</string>
    <string name="lbl_stove">Stove</string>
    <string name="lbl_louisaingram">\@louisaingram</string>
    <string name="msg_edward_gmail_co">edward@gmail.com</string>
    <string name="lbl_add_an_item">Add an item</string>
    <string name="lbl_app_navigation">App Navigation</string>
    <string name="lbl_edward_ford">Edward Ford</string>
    <string name="lbl_toaster">Toaster</string>
    <string name="lbl_refrigerator">Refrigerator</string>
    <string name="lbl_edwardford2">\@edwardford</string>
    <string name="lbl_host_kitchen">Host Kitchen</string>
    <string name="msg_are_you_sure_ab">Are you sure about this?</string>
    <string name="lbl_oven">Oven</string>
    <string name="lbl_yes">Yes</string>
    <string name="logout">Logout</string>
    <string name="msg_1129_south_park">1129 South Park Street</string>
    <string name="lbl_user_profile">User Profile</string>
    <string name="lbl_delete_account">Delete Account</string>
    <string name="lbl_17777777778">+17777777778</string>
    <string name="lbl_logan_nasser">Logan Nasser</string>
    <string name="msg_delete_your_acc">Delete your account</string>
    <string name="lbladd">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Friends -->
    <string name="friend1">Logan Nasser</string>
    <string name="friend2">Logan Naser</string>
    <string name="friend3">Log Mas</string>
    <string name="friend4">Mas Log</string>
    <string name="friend5">Log Max</string>
    <string name="friend6">Logon Maxon</string>

    <string name="frienduser1">logan</string>
    <string name="frienduser2">lou</string>
    <string name="frienduser3">ani</string>
    <string name="frienduser4">gramas</string>
    <string name="frienduser5">maxlog</string>
    <string name="frienduser6">maxonlog</string>

    <!-- Chat name -->
    <string name="lbl_richard_alves">Richard Alves</string>

</resources>
