<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">

        <ImageButton
            android:id="@+id/btnArrowleft"
            android:layout_width="@dimen/_41pxh"
            android:layout_height="@dimen/_41pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
            android:paddingHorizontal="@dimen/_12pxh"
            android:paddingVertical="@dimen/_12pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
        <TextView android:id="@+id/txtHelloRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_hello_register"
            style="@style/txtUrbanistromanbold30" tools:text="@string/msg_hello_register"/>

        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_first_name"
            android:id="@+id/etFirstNameInput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill" />

        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_last_name"
            android:id="@+id/etLastNameInput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill" />

        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsernameInput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_50_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etEmailInput"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>

        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_indigo_50_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPasswordInput"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_21pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_indigo_50_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etConfirmpasswor"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_21pxv" android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            style="@style/txtUrbanistromansemibold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:clickable="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="17dp"
            android:text="@string/msg_already_have_an"
            tools:text="@string/msg_already_have_an" />

    </LinearLayout>
</layout>
