<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnwelcomeback"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtWelcomeBack"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_44pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/msg_password_recove"
                style="@style/txtUrbanistromanbold22" tools:text="@string/msg_password_recove"/>

            <TextView
                android:id="@+id/txtLogintocontin"
                style="@style/txtUrbanistromanregular14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_28pxh"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/msg_enter_recovery_email"
                tools:text="@string/msg_enter_recovery_email" />
            <TextView android:ellipsize="end" android:id="@+id/txtLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_email"
                style="@style/txtUrbanistromanregular12" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_gray_500_6c_radius_8"
                android:ellipsize="end"
                android:hint="@string/msg_anne_carry_mail"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_500"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSendEmail"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@string/lbl_send_email"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_send_email"/>
        </LinearLayout>
    </LinearLayout>
</layout>
