<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first_constraint"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginSignupScreen"
    android:background="@color/white"
    tools:ignore="InvalidId"
    >


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_button"
        style="@style/btnSolidRounded"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="136dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_20pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_20pxv"
        android:singleLine="true"
        android:text="@string/lbl_login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnc_string"
        tools:text="@string/lbl_login" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="127dp"
        android:contentDescription="@string/lbl_food_n_culture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/fnc_string"
        android:layout_width="227dp"
        android:layout_height="71dp"
        android:fontFamily="@font/pacifico"
        android:text="Food n' Culture"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.063" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        style="@style/btnSolidRounded"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_20pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_20pxv"
        android:singleLine="true"
        android:text="@string/lbl_signup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnc_string"
        tools:text="@string/lbl_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>